indexing form janusGraph and minor fixes